tests/cases/compiler-development/artifact/errors/diagnostic_cycle_a.ari
mod diagnostic_cycle_b;

pub fn value() -> i64 {
  return 1;
}
